--- a/package.json
+++ b/package.json
@@ -1,22 +1,26 @@
 {
   "name": "admin-hapijs-example",
-  "version": "1.0.0",
-  "description": "",
+  "version": "0.1.0",
+  "description": "This is an official AdminBro plugin which integrates it to hapijs framework.",
   "main": "index.js",
   "scripts": {
     "simple": "nodemon examples/simple.js",
     "session-auth": "nodemon examples/session-auth.js"
   },
   "author": "Wojciech Krysiak",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "admin-bro": "^0.1.1",
-    "bcrypt": "^3.0.2",
     "boom": "^7.3.0",
     "hapi": "^17.8.1",
     "hapi-auth-cookie": "^9.1.0"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/SoftwareBrothers/admin-bro-hapijs.git"
+  },
   "devDependencies": {
+    "bcrypt": "^3.0.2",
     "mongoose": "^5.3.14",
     "node-sass": "^4.10.0",
     "nodemon": "^1.18.7",
