--- a/package.json
+++ b/package.json
@@ -15,10 +15,20 @@
     "hapi": "^17.8.1",
     "hapi-auth-cookie": "^9.1.0"
   },
+  "bugs": {
+    "url": "https://github.com/SoftwareBrothers/admin-bro-hapijs/issues"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/SoftwareBrothers/admin-bro-hapijs.git"
   },
+  "homepage": "https://github.com/SoftwareBrothers/admin-bro-hapijs#readme",
+  "keywords": [
+    "hapi",
+    "admin",
+    "admin-bro",
+    "admin-panel"
+  ],
   "devDependencies": {
     "bcrypt": "^3.0.2",
     "mongoose": "^5.3.14",
