--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "admin-bro": "^0.1.1",
     "boom": "^7.3.0",
     "hapi": "^17.8.1",
-    "hapi-auth-cookie": "^9.1.0"
+    "hapi-auth-cookie": "^9.1.0",
+    "inert": "^5.1.2"
   },
   "bugs": {
     "url": "https://github.com/SoftwareBrothers/admin-bro-hapijs/issues"
@@ -32,7 +33,6 @@
   "devDependencies": {
     "bcrypt": "^3.0.2",
     "mongoose": "^5.3.14",
-    "node-sass": "^4.10.0",
     "nodemon": "^1.18.7",
     "require.all": "^2.0.4"
   }
