--- a/package.json
+++ b/package.json
@@ -32,13 +32,17 @@
     "admin-panel"
   ],
   "devDependencies": {
-    "bcrypt": "^3.0.2",
-    "mongoose": "^5.3.14",
-    "nodemon": "^1.18.7",
-    "require.all": "^2.0.4",
+    "admin-bro": "^0.3.0",
+    "admin-bro-mongoose": "^0.1.4",
+    "bcrypt": "^3.0.3",
+    "boom": "^7.3.0",
     "eslint": "^5.10.0",
     "eslint-config-airbnb-base": "^13.1.0",
-    "eslint-plugin-import": "^2.14.0"
+    "eslint-plugin-import": "^2.14.0",
+    "hapi": "^17.8.1",
+    "mongoose": "^5.3.14",
+    "nodemon": "^1.18.7",
+    "require.all": "^2.0.4"
   },
   "dependencies": {
     "hapi-auth-cookie": "^9.1.0",
