--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "admin-bro-hapijs",
-  "version": "0.2.2",
+  "version": "2.0.0-beta.1",
   "description": "This is an official AdminBro plugin which integrates it to hapijs framework.",
   "main": "index.js",
   "scripts": {
@@ -32,9 +32,8 @@
     "admin-panel"
   ],
   "devDependencies": {
-    "admin-bro": "^0.9.0",
+    "admin-bro": "^2.0.0-beta.21",
     "admin-bro-mongoose": "^0.1.4",
-    "bcrypt": "^3.0.3",
     "boom": "^7.3.0",
     "eslint": "^5.10.0",
     "eslint-config-airbnb-base": "^13.1.0",
