--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "admin-bro-hapijs",
-  "version": "2.0.0-beta.1",
+  "version": "2.0.0",
   "description": "This is an official AdminBro plugin which integrates it to hapijs framework.",
   "main": "index.js",
   "scripts": {
@@ -11,7 +11,7 @@
   "author": "Wojciech Krysiak",
   "license": "MIT",
   "peerDependencies": {
-    "admin-bro": ">=0.9.0",
+    "admin-bro": ">=2.0.0",
     "boom": "^7.3.0",
     "hapi": "^17.8.1",
     "hapi-auth-cookie": "^9.1.0",
@@ -32,7 +32,7 @@
     "admin-panel"
   ],
   "devDependencies": {
-    "admin-bro": "^2.0.0-beta.21",
+    "admin-bro": "^2.0.0",
     "admin-bro-mongoose": "^0.1.4",
     "boom": "^7.3.0",
     "eslint": "^5.10.0",
