--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "This is an official AdminBro plugin which integrates it to hapijs framework.",
   "main": "index.js",
   "scripts": {
-    "simple": "nodemon examples/simple.js",
-    "session-auth": "nodemon examples/session-auth.js",
+    "dev": "nodemon examples/simple.js",
+    "dev:auth": "nodemon examples/session-auth.js",
     "lint": "./node_modules/eslint/bin/eslint.js './extensions/**/*.js' './examples/**/*.js' './plugin.js'",
     "release": "semantic-release"
   },
@@ -13,10 +13,10 @@
   "license": "MIT",
   "peerDependencies": {
     "@admin-bro/core": ">=3.0.0-beta.1",
-    "boom": "^7.3.0",
-    "hapi": "^17.8.1",
-    "hapi-auth-cookie": "^9.1.0",
-    "inert": "^5.1.2"
+    "@hapi/boom": "^9.1.0",
+    "@hapi/hapi": "^19.2.0",
+    "@hapi/cookie": "^11.0.0",
+    "@hapi/inert": "^6.0.1"
   },
   "bugs": {
     "url": "https://github.com/SoftwareBrothers/admin-bro-hapijs/issues"
@@ -35,11 +35,11 @@
   "devDependencies": {
     "@admin-bro/core": ">=3.0.0-beta.1",
     "@admin-bro/mongoose": "^1.0.0-beta.1",
-    "boom": "^7.3.0",
+    "@hapi/boom": "^9.1.0",
+    "@hapi/hapi": "^19.2.0",
     "eslint": "^5.10.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.14.0",
-    "hapi": "^17.8.1",
     "mongoose": "^5.3.14",
     "nodemon": "^1.18.7",
     "require.all": "^2.0.4",
@@ -51,7 +51,7 @@
     "@commitlint/config-conventional": "^8.3.4"
   },
   "dependencies": {
-    "hapi-auth-cookie": "^9.1.0",
-    "inert": "^5.1.2"
+    "@hapi/cookie": "^11.0.0",
+    "@hapi/inert": "^6.0.1"
   }
 }
