ci: add hisky hooks

--- a/package.json
+++ b/package.json
@@ -50,6 +50,11 @@
     "@commitlint/cli": "^8.3.5",
     "@commitlint/config-conventional": "^8.3.4"
   },
+  "husky": {
+    "hooks": {
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+    }
+  },
   "dependencies": {
     "@hapi/cookie": "^11.0.0",
     "@hapi/inert": "^6.0.1"
