--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -73,6 +73,7 @@ jobs:
         run: yarn install
       - name: Release
         env:
+          SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: yarn release
