--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "author": "Wojciech Krysiak",
   "license": "MIT",
   "peerDependencies": {
-    "admin-bro": ">=3.0.0-beta.1",
+    "admin-bro": ">=3.0.0",
     "@hapi/boom": "^9.1.0",
     "@hapi/cookie": "^11.0.0",
     "@hapi/hapi": "^19.2.0",
@@ -33,8 +33,8 @@
     "admin-panel"
   ],
   "devDependencies": {
-    "admin-bro": ">=3.0.0-beta.1",
-    "@admin-bro/mongoose": "^1.0.0-beta.1",
+    "admin-bro": ">=3.0.0",
+    "@admin-bro/mongoose": "^1.0.0",
     "@commitlint/cli": "^8.3.5",
     "@commitlint/config-conventional": "^8.3.4",
     "@hapi/boom": "^9.1.0",
