--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@hapi/hapi": "^20.2.1",
     "@hapi/inert": "^6.0.5",
     "@semantic-release/git": "^9.0.0",
+    "@types/node": "^17.0.21",
     "@typescript-eslint/eslint-plugin": "^5.13.0",
     "@typescript-eslint/parser": "^5.13.0",
     "adminjs": "^5.7.2",
