chore: fixed admin dev integration

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,8 +17,7 @@
     "strictBindCallApply": true,
     "noImplicitThis": true,
     "moduleResolution": "node",
-    "baseUrl": "./",
-    "typeRoots": ["./node_modules/@types"]
+    "baseUrl": "./"
   },
   "exclude": ["lib", "types", "test", "examples"]
 }
