--- a/package.json
+++ b/package.json
@@ -1,9 +1,14 @@
 {
   "name": "@adminjs/hapi",
   "version": "6.0.2",
+  "type": "module",
   "description": "This is an official AdminJS plugin which integrates it with hapijs framework.",
-  "main": "lib/index.js",
-  "types": "lib/index.d.ts",
+  "exports": {
+    ".": {
+      "import": "./build/index.js",
+      "types": "./types/index.d.ts"
+    }
+  },
   "scripts": {
     "dev": "rm -rf lib && tsc --watch",
     "lint": "eslint -c './.eslintrc.js' './src/**/*.ts' './examples/**/*.ts'",
@@ -66,7 +71,7 @@
     "require.all": "^2.0.4",
     "semantic-release": "^17.0.7",
     "semantic-release-slack-bot": "^1.6.2",
-    "typescript": "^4.6.2"
+    "typescript": "^4.9.5"
   },
   "husky": {
     "hooks": {
