fix(ci): add missing build step

--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -23,6 +23,8 @@ jobs:
         run: yarn install
       - name: Lint
         run: yarn lint
+      - name: Build
+        run: yarn build
       - name: Release
         env:
           SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
