--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "@types/node": "^18.15.5",
     "@typescript-eslint/eslint-plugin": "^5.56.0",
     "@typescript-eslint/parser": "^5.56.0",
+    "@types/jest": "^26.0.15",
     "adminjs": "^7.0.0-beta-v7.1",
     "eslint": "^8.36.0",
     "eslint-config-airbnb-base": "^15.0.0",
@@ -68,6 +69,8 @@
     "prettier": "^2.8.7",
     "semantic-release": "^20.1.3",
     "semantic-release-slack-bot": "^4.0.0",
+    "jest": "^29.5.0",
+    "ts-jest": "^29.0.5",
     "typescript": "^4.9.5"
   },
   "husky": {
