--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "@hapi/cookie": "^12.0.1",
     "@hapi/hapi": "^21.3.0",
     "@hapi/inert": "^7.1.0",
-    "adminjs": ">=6.0.0"
+    "adminjs": "^7.0.0"
   },
   "peerDependenciesMeta": {
     "@hapi/inert": {
@@ -57,7 +57,7 @@
     "@types/node": "^18.15.5",
     "@typescript-eslint/eslint-plugin": "^5.56.0",
     "@typescript-eslint/parser": "^5.56.0",
-    "adminjs": "^7.0.0-beta-v7.1",
+    "adminjs": "^7.0.0",
     "eslint": "^8.36.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.8.0",
